@@ -1,6 +1,7 @@
 
 8.73  2021-02-04
   - Removed finally keyword from check function in Mojo::Exception.
+  - Changed arguments of check function in Mojo::Exception to be easier to use with Perl 5.34 try/catch.
   - Added silent attribute to Mojo::Server::Morbo.
 
 8.72  2021-01-26
